# EDU

./: .gitattributes  Absente.h  Admin.cpp  Admin.h  CMakeLists.txt  Catedra.cpp  Catedra.h  Curs.cpp  Curs.h  DatabaseConnection.cpp  DatabaseConnection.h  EDU-Reusita.cpp  EDU-Reusita.sln  EDU-Reusita.vcxproj  EDU-Reusita.vcxproj.filters  Grupa.cpp  Grupa.h  IncludesCentral.h  Professor.cpp  Professor.h  Student.cpp  Student.h  SystemManagement.cpp  SystemManagement.h  User.h  academic_records.cpp  academic_records.h
Debug/: EDU-Reusita.ilk  academic_records.obj.enc  vc141.idb
Debug/EDU-Reusita.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  EDU-Reusita.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/EDU-Reusita.tlog/: CL.command.1.tlog  CL.write.1.tlog  EDU-Reusita.lastbuildstate
x64/Debug/: academic_records.nativecodeanalysis.xml  databaseconnection.obj.enc  vc.nativecodeanalysis.all.xml  vc141.idb
x64/Debug/EDU-Reusita.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  EDU-Reusita.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: EDU-Reusita.iobj  EDU-Reusita.ipdb
x64/Release/EDU-Reusita.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  EDU-Reusita.lastbuildstate  EDU-Reusita.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
